# rocAL

./: CHANGELOG.md  CMakeLists.txt  README.md  rocAL-setup.py  utils.cmake
cmake/: FindMIVisionX.cmake
docker/: rocal-with-pytorch.dockerfile
docs/: README.md  conf.py  index.rst
docs/conceptual/: overview.rst  rocAL-operators.rst
docs/doxygen/: Doxyfile
docs/examples/: examples.rst
docs/examples/image_processing/: inference_pipeline.py
docs/examples/notebooks/: augmentation_examples.ipynb  create_classification_flower_dataset.py  decoder_examples.ipynb  jax_training_example.ipynb  python_function_example.ipynb  resize_implementation.ipynb  tf_dataloader.ipynb  video_decoder.ipynb  video_reader_with_label.ipynb  webdataset_reader_example.ipynb
docs/how-to/: rocAL-jax-framework.rst  rocAL-pytorch-framework.rst  rocAL-tensorflow-framework.rst  rocAL-use-pipeline.rst
docs/install/: rocAL-build-and-install.rst  rocAL-package-install.rst  rocAL-prerequisites.rst
docs/reference/: rocAL-and-RNNT.rst  rocAL-cpp-api-list.rst  rocAL-cpp-api.rst  rocAL-pipeline.rst  rocAL-python-api-list.rst  rocAL-python-api.rst
docs/sphinx/: _toc.yml.in  requirements.in  requirements.txt
rocAL/: CMakeLists.txt
rocAL/include/api/: rocal_api.h  rocal_api_augmentation.h  rocal_api_data_loaders.h  rocal_api_meta_data.h  rocal_api_types.h
rocAL/include/augmentations/: augmentations_nodes.h  node_normal_distribution.h  node_python_function.h  node_uniform_distribution.h
rocAL/include/augmentations/arithmetic_augmentations/: node_log.h  node_log1p.h  node_tensor_add_tensor.h  node_tensor_mul_scalar.h  node_tensor_statistics.h
rocAL/include/augmentations/audio_augmentations/: node_mel_filter_bank.h  node_preemphasis_filter.h  node_resample.h  node_spectrogram.h
rocAL/include/augmentations/color_augmentations/: node_brightness.h  node_channel_permute.h  node_color_cast.h  node_color_jitter.h  node_color_to_greyscale.h  node_non_linear_blend.h
rocAL/include/augmentations/effects_augmentations/: node_gaussian_noise.h  node_grid_mask.h  node_jpeg_compression_distortion.h  node_lut.h  node_posterize.h  node_shot_noise.h  node_snow.h  node_solarize.h  node_spatter.h  node_water.h
rocAL/include/augmentations/filter_augmentations/: node_bitwise_ops.h  node_dilate.h  node_erase.h  node_erode.h  node_gaussian_filter.h  node_magnitude.h  node_median_filter.h  node_phase.h  node_threshold.h
rocAL/include/augmentations/geometry_augmentations/: node_crop_and_patch.h  node_crop_resize.h  node_flip.h  node_remap.h  node_resize.h  node_resize_crop_mirror.h  node_resize_mirror_normalize.h  node_ricap.h  node_rotate.h  node_slice.h  node_warp_affine.h  node_warp_perspective.h
rocAL/include/decoders/audio/: audio_decoder_factory.hpp
rocAL/include/decoders/image/: decoder.h  fused_crop_decoder.h  open_cv_decoder.h  rocjpeg_decoder.h  rocjpeg_fused_crop_decoder.h  turbo_jpeg_decoder.h
rocAL/include/loaders/: circular_buffer.h  loader_module.h
rocAL/include/loaders/image/: image_loader.h  image_loader_sharded.h  image_read_and_decode.h  node_cifar10_loader.h  node_cifar10_loader_single_shard.h  node_fused_jpeg_crop.h  node_fused_jpeg_crop_single_shard.h  node_image_loader.h  node_image_loader_single_shard.h  node_numpy_loader.h  node_numpy_loader_single_shard.h  numpy_loader.h
rocAL/include/meta_data/: meta_data_reader.h
rocAL/include/parameters/: parameter.h  parameter_factory.h  parameter_random.h  parameter_random_crop_decoder.h
rocAL/include/pipeline/: argument.h  argument_types.h  checkpoint.h  commons.h  content_hash.h  context.h  enum_registry.h  master_graph.h  node.h  node_factory.h  pipeline_operator.h  pipeline_serializer.h  random_object_bbox.h  ring_buffer.h  tensor.h
rocAL/include/readers/: file_source_reader.h
rocAL/proto/: rocal.proto
rocAL/rocAL_hip/: CMakeLists.txt  rocal_hip_kernels.cpp  rocal_hip_kernels.h
rocAL/source/api/: rocal_api.cpp  rocal_api_augmentation.cpp  rocal_api_data_loaders.cpp  rocal_api_data_transfer.cpp  rocal_api_meta_data.cpp
rocAL/source/augmentations/: node_copy.cpp  node_normal_distribution.cpp  node_python_function.cpp  node_uniform_distribution.cpp
rocAL/source/loaders/: circular_buffer.cpp
rocAL/source/meta_data/: bounding_box_graph.cpp  webdataset_meta_data_reader.cpp
rocAL/source/parameters/: parameter_factory.cpp  parameter_random_crop_decoder.cpp
rocAL/source/pipeline/: master_graph.cpp  pipeline_serializer.cpp  random_object_bbox.cpp  ring_buffer.cpp  tensor.cpp
rocAL/source/readers/: file_source_reader.cpp  webdataset_source_reader.cpp
rocAL_pybind/: CMakeLists.txt  __init__.py  rocal_pybind.cpp
rocAL_pybind/amd/rocal/: __init__.py  decoders.py  fn.py  pipeline.py  types.py
rocAL_pybind/amd/rocal/plugin/: jax.py
tests/cpp_api/: CMakeLists.txt
tests/cpp_api/audio_tests/: CMakeLists.txt  audio_tests.cpp
tests/cpp_api/basic_test/: CMakeLists.txt  README.md  basic_test.cpp
tests/cpp_api/checkpoint_test/: CMakeLists.txt  checkpoint_test.cpp  restore_checkpoint_test.cpp
tests/cpp_api/dataloader/: CMakeLists.txt
tests/cpp_api/dataloader_multithread/: CMakeLists.txt  dataloader_multithread.cpp
tests/cpp_api/dataloader_tf/: CMakeLists.txt
tests/cpp_api/external_source/: CMakeLists.txt
tests/cpp_api/image_augmentation/: CMakeLists.txt  image_augmentation.cpp
tests/cpp_api/multiple_dataloaders_test/: CMakeLists.txt
tests/cpp_api/performance_tests/: CMakeLists.txt
tests/cpp_api/performance_tests_with_depth/: CMakeLists.txt
tests/cpp_api/serialization_test/: CMakeLists.txt  README.md  serialization_test.cpp
tests/cpp_api/unit_tests/: CMakeLists.txt  testAllScripts.sh  unit_tests.cpp
tests/cpp_api/video_tests/: CMakeLists.txt
tests/cpp_api/voxel_augmentations_test/: CMakeLists.txt  README.md  voxel_augmentations_test.cpp
tests/python_api/: README.md  audio_unit_test.py  image_comparison.py  jax_classification_reader.py  pipeline_checkpoint_example.py  pipeline_serialize_test.py  python_function_example.py  pytorch_multi_channel_loader.py  unit_test.py  unit_tests.sh
(+63 files in other folders)
